# pishoo

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  Makefile  README.md  TODO.md  homebrew.sh  launch_pishoo_debug.fish  rules.db
.github/workflows/: release.yml  rpi.yml
config/: forward-ocsp-local.conf  forward.conf  mime.types  pishoo-ocsp-local.conf  pishoo-stun-10.1.12.7.conf  pishoo-stun-10.1.12.8.conf  pishoo-stun-10.1.8.11.conf  pishoo.conf  pishoo2.conf  reverse.conf  test.conf
config/conf.d/: sub1.conf  sub2.conf  sub2.conf.bak
examples/: forward.rs  h3-ssh.rs  pishoo.conf  pishoo.rs  reverse.rs
gateway/: Cargo.toml  build.rs
gateway/examples/: forward.rs
gateway/src/: command.rs  common.rs  control_plane.rs  dns.rs  error.rs  forward.rs  h3.rs  lib.rs  localhost.rs  ocsp.rs  parse.rs  pool.rs  publisher.rs  reverse.rs  stun.rs  utils.rs
gateway/src/command/: acl.rs  file.rs  header.rs  variables.rs
gateway/src/dns/: publish.rs  resolve.rs
gateway/src/forward/: h3_client.rs  normal.rs  quic.rs  task_scope.rs
gateway/src/ocsp/: fetch.rs  verifier.rs  wire.rs
gateway/src/parse/: ast.rs  build.rs  builtin.rs  cascade.rs  commands.rs  conf.rs  config.rs  decode.rs  diagnostic.rs  directives.rs  document.rs  domain.rs  error.rs  fragment.rs  grammar.rs  include.rs  location.rs  node.rs  normalize.rs  pattern.rs  pishoo.rs  proxy.rs  registry.rs  server.rs  snapshot.rs  source.rs  tests.rs  tree.rs  types.rs  value.rs
gateway/src/parse/builtin/: access.rs  common.rs  core.rs  http.rs  location.rs  net.rs  pishoo.rs  proxy.rs  server.rs  ssh.rs  stun.rs
gateway/src/reverse/: access_control.rs  access_log.rs  auth.rs  body_adapter.rs  file.rs  gzip.rs  location.rs  log.rs  middleware.rs  proxy.rs  request_uri.rs  router.rs  sshd.rs  tunnel.rs  upstream_tls.rs
gateway/src/reverse/access_log/: body.rs
gateway/src/reverse/sshd/: async_fd.rs  auth.rs  cbor_codec.rs  forward.rs  h3_stream.rs  map_sink.rs  mux.rs  session.rs  socks.rs  terminal.rs
gateway/src/stun/: config.rs  manager.rs
gateway/tests/: forward_lifecycle.rs  relative_static_root.rs
keychain/: README.md  gen_cert.sh  root.crt  root.key  rootCA-ECC.crt  test10.genmeta.net.crt  test10.genmeta.net.key
keychain/test1.genmeta.net/: test1-genmeta-net-ECC.crt  test1-genmeta-net-ECC.csr  test1-genmeta-net-ECC.key
keychain/test2.genmeta.net/: test2-genmeta-net-ECC.crt  test2-genmeta-net-ECC.csr  test2-genmeta-net-ECC.key
pishoo/: Cargo.toml  build.rs  homebrew_content.rb
pishoo/pkg/common/etc/pishoo/: pishoo.conf
pishoo/pkg/common/lib/systemd/system/: pishoo.service
pishoo/pkg/common/service/: pishoo.service
pishoo/pkg/debian/: .gitignore  changelog  conffiles  control  pishoo-common.install  pishoo-common.pishoo.service  pishoo-common.postinst  postinst  postrm  rules
pishoo/res/config/: pishoo.conf
pishoo/src/: bind.rs  config.rs  hypervisor.rs  ipc.rs  launcher.rs  lib.rs  listen.rs  local_service.rs  main.rs  naming.rs  per_server_listen.rs  policy.rs  protocol.rs  remoc_bridge.rs  root.rs  root_state.rs  root_transport_api.rs  service.rs  signal.rs  tls.rs  tracing_init.rs  worker.rs  worker_spawn.rs
pishoo/src/config/: account.rs  discovery.rs  entry.rs  home_tree.rs  plan.rs  root.rs  source.rs  tests.rs  validate.rs  worker_target.rs
pishoo/src/hypervisor/: dns.rs  endpoint_factory.rs  global_service.rs  in_process_plane.rs  ipc_server.rs  launcher.rs  local_plane.rs  local_service.rs  network.rs  process.rs  reload.rs  resource.rs  rpc_server.rs  shutdown.rs  signal.rs  state.rs  task_scope.rs  worker_handle.rs
pishoo/src/hypervisor/process/: batch.rs  monitor.rs  spawn.rs
pishoo/src/hypervisor/reload/: orchestrate.rs  snapshot.rs
pishoo/src/hypervisor/state/: completion.rs  listener_registry.rs  owner.rs  process_ops.rs  server_ops.rs  tests.rs
pishoo/src/root/: config.rs  launcher.rs  local_control_plane.rs  local_plane.rs  local_service.rs  log.rs  network.rs  process.rs  rpc_server.rs  state.rs  worker_handle.rs
pishoo/src/service/: accept.rs  resource.rs  runtime.rs  set.rs  snapshot.rs  source.rs
pishoo/src/signal/: unix.rs  windows.rs
pishoo/src/worker/: config.rs  remote_control_plane.rs  remote_plane.rs
pishoo/tests/: launcher.rs  main.rs  root_state.rs  worker.rs
scripts/: e2e_proxy_https_chain.sh
src/: client.rs  command.rs  common.rs  config.rs  dns.rs  error.rs  forward.rs  handle.rs  http.rs  lib.rs  localhost.rs  main.bak.rs  main.rs  new_parse.rs  parse.rs  pishoo.rs  proxy.rs  reverse.rs  support.rs  util.rs
src/forward/: acl.rs  quic.rs
src/handle/: proxy.rs  static_file.rs
src/http/: http3.rs
src/new_parse/: conf.rs  location.rs  pishoo.rs  proxy.rs  server.rs
src/parse/: conf.rs  gateway.rs  location.rs  pattern.rs  pishoo.rs  proxy.rs  router.rs  rule.rs  server.rs  version.rs
src/reverse/: file.rs  proxy.rs  sshd.rs
src/support/: tokiort.rs
src/util/: body.rs  net.rs
tools/https-upstream-server/: Cargo.toml
tools/https-upstream-server/src/: main.rs
xtask/: Cargo.toml  release.toml
xtask/deb/: control  copyright  pishoo-common.pishoo.service  pishoo-common.postinst  rules
xtask/deb/common/etc/dhttp/: mime.types  pishoo.conf
xtask/deb/common/etc/pishoo/: pishoo.conf
xtask/release/brew/: pishoo.sh
xtask/release/deb/: Dockerfile  package.sh
xtask/release/rpm/: Dockerfile  package.sh
xtask/src/: brew.rs  container.rs  deb.rs  grouped.rs  main.rs  package.rs  publish.rs  release.rs  release_contract.rs  rpm.rs  template.rs  version_cmp.rs
xtask/src/package/: brew.rs  deb.rs  manifest.rs  prompt.rs  rpm.rs
xtask/src/publish/: s3.rs
xtask/src/publish/s3/: brew.rs  deb.rs  key.rs  plan.rs  rpm.rs
xtask/src/release/: apt.rs  artifact.rs  grouped.rs  homebrew.rs  paths.rs  ppa.rs  rpm.rs  s3.rs  tap.rs  verify.rs
xtask/templates/: pishoo.rb.in
xtask/tests/: release_contract.rs  worker_group_contract.rs
