[workspace]
resolver = "2"
members = ["gateway", "pishoo", "xtask"]


[workspace.dependencies]
# --- Core & Error Handling ---
snafu = "0.8"

# --- Async Runtime & Utilities ---
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"
tokio-util = "0.7"

# --- Serialization ---
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
tokio-serde = "0.9"

# --- Logging & Tracing ---
tracing = { version = "0.1", default-features = false, features = [
    "std",
    "attributes",
] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
    "ansi",
    "time",
    "local-time",
] }
tracing-appender = "0.2"
console-subscriber = "0.4"

# --- Networking & HTTP ---
bytes = "1"
http = "1"
http-body = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio"] }
axum = { version = "0.8", default-features = false }
tower = { version = "0.5", default-features = false, features = ["util"] }
tower-service = "0.3"
reqwest = { version = "0.13", default-features = false, features = [
    "charset",
    "http2",
    "system-proxy",
    "gzip",
    "json",
    "zstd",
    "rustls-no-provider",
] }
firewall-base = { git = "ssh://git@github.com/genmeta/firewall.git", rev = "85493bbc847cf3e95d54f5b0b7acbf5d3ca85b56" }
firewall-db = { git = "ssh://git@github.com/genmeta/firewall.git", rev = "85493bbc847cf3e95d54f5b0b7acbf5d3ca85b56" }

# --- QUIC Implementation ---
dquic = { path = "../gm-quic/dquic" }
qevent = { path = "../gm-quic/qevent" }
h3x = { path = "../h3x" }

# --- IPC / RPC ---
remoc = { version = "0.18", default-features = false, features = [
    "remoc_macro",
    "rfn",
    "rtc",
    "serde",
    "default-codec-bincode",
] }

# --- SSH3 ---
genmeta-ssh = { git = "ssh://git@github.com/genmeta/genmeta-ssh.git", rev = "a32d6bec27dd3012f5914a9efb83d66cf11c172a" }

# --- DNS (mDNS/HTTP resolver) ---
gmdns = { path = "../gmdns", features = ["h3x-resolver"] }

# --- Security & TLS ---
getrandom = "0.3.1"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-native-certs = "0.8"
tokio-rustls = "0.26"

# --- Utilities ---
regex = "1"
parking_lot = "0.12"
misc-conf = "0.1"
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.29", features = ["events", "event-stream"] }
either = "1"
rpassword = "7.3"
base64 = "0.22"
socks5-proto = "0.4"
derive_more = "2"
dashmap = "6"
pin-project-lite = "0.2"
form_urlencoded = "1"
socket2 = "0.5"
x509-parser = "0.18"
dhttp-home = { git = "ssh://git@github.com/genmeta/dhttp-home.git", rev = "780ee2de466d64527fed636e7583bf11aef92f1e" }

# --- System Interaction ---
libc = "0.2"
nix = "0.31"
pam = "0.7"

# --- Database ORM ---
sea-orm = { version = "1", features = ["runtime-tokio-rustls"] }
sea-orm-migration = { version = "1", features = ["runtime-tokio-rustls"] }

# --- workspace ---
gateway = { path = "gateway", default-features = false }

[profile.dev]
panic = "abort"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[patch."ssh://git@github.com/genmeta/dquic.git"]
qmacro = { path = "../gm-quic/qmacro" }
qbase = { path = "../gm-quic/qbase" }
qevent = { path = "../gm-quic/qevent" }
qrecovery = { path = "../gm-quic/qrecovery" }
qcongestion = { path = "../gm-quic/qcongestion" }
qudp = { path = "../gm-quic/qudp" }
qinterface = { path = "../gm-quic/qinterface" }
qdatagram = { path = "../gm-quic/qdatagram" }
qconnection = { path = "../gm-quic/qconnection" }
dquic = { path = "../gm-quic/dquic" }
qtraversal = { path = "../gm-quic/qtraversal" }
qresolve = { path = "../gm-quic/qresolve" }

[patch."ssh://git@github.com/genmeta/h3x.git"]
h3x = { path = "../h3x" }

[patch."ssh://git@github.com/genmeta/gmdns.git"]
gmdns = { path = "../gmdns" }
