[workspace]
resolver = "2"
members = ["gateway", "pishoo", "xtask"]

[workspace.dependencies]
# --- Core & Error Handling ---
snafu = "0.8"

# --- Async Runtime & Utilities ---
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"
tokio-util = "0.7"

# --- Serialization ---
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
tokio-serde = "0.9"

# --- Logging & Tracing ---
tracing = { version = "0.1", default-features = false, features = [
    "std",
    "attributes",
] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
    "ansi",
    "time",
    "local-time",
] }
tracing-appender = "0.2"
console-subscriber = "0.4"

# --- Networking & HTTP ---
bytes = "1"
http = "1"
http-body = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio"] }
axum = { version = "0.8", default-features = false }
tower = { version = "0.5", default-features = false, features = ["util"] }
tower-service = "0.3"
dhttp-access = { git = "ssh://git@github.com/genmeta/dhttp.git", branch = "main", default-features = false }

# --- QUIC Implementation ---
h3x = { git = "https://github.com/genmeta/h3x.git", branch = "endpoint" }

# --- IPC / RPC ---
remoc = { version = "0.18", default-features = false, features = [
    "remoc_macro",
    "rfn",
    "rtc",
    "serde",
    "default-codec-bincode",
] }

# --- SSH3 ---
dssh = { git = "ssh://git@github.com/genmeta/dssh.git", branch = "endpoint" }

# --- DNS (mDNS/HTTP resolver) ---
ddns = { git = "ssh://git@github.com/genmeta/ddns.git", branch = "endpoint", features = [
    "h3x-resolver",
    "mdns-resolver",
] }

# --- Security & TLS ---
getrandom = "0.3.1"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-native-certs = "0.8"
tokio-rustls = "0.26"

# --- Utilities ---
regex = "1"
parking_lot = "0.12"
misc-conf = "0.1"
peg = "0.8"
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.29", features = ["events", "event-stream"] }
either = "1"
rpassword = "7.3"
base64 = "0.22"
socks5-proto = "0.4"
derive_more = "2"
dashmap = "6"
pin-project-lite = "0.2"
form_urlencoded = "1"
socket2 = "0.5"
x509-parser = "0.18"
dhttp-config = { git = "ssh://git@github.com/genmeta/dhttp.git", branch = "main" }
dhttp-identity = { git = "ssh://git@github.com/genmeta/dhttp.git", branch = "main" }
dhttp = { git = "ssh://git@github.com/genmeta/dhttp.git", branch = "main" }

# --- System Interaction ---
libc = "0.2"
nix = "0.31"
pam = "0.7"

# --- Database ORM ---
sea-orm = { version = "1", features = ["runtime-tokio-rustls"] }
sea-orm-migration = { version = "1", features = ["runtime-tokio-rustls"] }

# --- workspace ---
gateway = { path = "gateway", default-features = false }

[profile.dev]
panic = "abort"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

# Temporary root-only provider patches for Task 7 migration.
# Remove these once the referenced remote branches contain dhttp-config,
# dhttp-access, consolidated ddns, and dssh.
[patch."ssh://git@github.com/genmeta/dhttp.git"]
dhttp = { path = "../dhttp/dhttp" }
dhttp-access = { path = "../dhttp/access" }
dhttp-config = { path = "../dhttp/config" }
dhttp-identity = { path = "../dhttp/identity" }

[patch."ssh://git@github.com/genmeta/ddns.git"]
ddns = { path = "../ddns" }

[patch."ssh://git@github.com/genmeta/dssh.git"]
dssh = { path = "../dssh" }

# Temporary root-only stack coherence patch while local ddns depends on the
# local h3x Network API. Remove with the provider patches above.
[patch."https://github.com/genmeta/h3x.git"]
h3x = { path = "../h3x" }
