[package]
name = "gateway"
version = "0.5.0"
edition = "2024"

[[example]]
name = "forward"
path = "examples/forward.rs"


[dependencies]
# --- Core & Error Handling ---
snafu = { workspace = true }

# --- Async Runtime & Utilities ---
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true, features = ["io", "rt"] }
futures = { workspace = true }
async-trait = { workspace = true }

# --- Logging & Tracing ---
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# --- Networking & HTTP ---
bytes = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-service = { workspace = true }
dhttp-access = { workspace = true, features = ["http"] }

# --- Security & TLS ---
rustls = { workspace = true }
rustls-native-certs = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = "2"
getrandom = { workspace = true }

# --- DNS resolver ---
ddns = { workspace = true }
h3x = { workspace = true, features = ["rpc"] }

# --- Data Structures & Utilities ---
dashmap = { workspace = true }
misc-conf = { workspace = true }
regex = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
socket2 = { workspace = true }
crossterm = { workspace = true }
rpassword = { workspace = true }
base64 = { workspace = true }
derive_more = { workspace = true, features = ["from"] }
form_urlencoded = { workspace = true }
x509-parser = { workspace = true }

dssh = { workspace = true, optional = true }
remoc = { workspace = true }
dhttp = { workspace = true }
dhttp-config = { workspace = true }
dhttp-identity = { workspace = true }
async-compression = { version = "0.4.36", features = ["tokio", "gzip"] }
chrono = "0.4.42"
tracing-appender = { workspace = true }

# --- Platform Specific Dependencies ---
[target.'cfg(any(target_os = "android", target_env = "ohos"))'.dependencies]
pnet = "0.35.0"

[target.'cfg(not(any(target_os = "android", target_env = "ohos")))'.dependencies]
getifs = "0.3"


[dev-dependencies]
clap = { workspace = true }


[features]
sshd = ["dep:dssh", "dssh/server", "remoc/rfn", "h3x/ipc"]
pam = ["sshd", "dssh/pam"]
stun_traversal = []
qlog = []
