[package]
name = "gateway"
version = "0.5.0"
edition = "2024"

[[example]]
name = "forward"
path = "examples/forward.rs"


[dependencies]
# --- Core & Error Handling ---
snafu = { workspace = true }

# --- Async Runtime & Utilities ---
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["io", "rt"] }
futures = { workspace = true }

# --- Logging & Tracing ---
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# --- Networking & HTTP ---
bytes = { workspace = true }
http = { workspace = true }
url = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-service = { workspace = true }
dhttp-access = { workspace = true, features = ["http"] }

# --- Security & TLS ---
rustls = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = "2"

# --- DNS resolver ---
ddns = { workspace = true }
h3x = { workspace = true, features = ["rpc"] }

# --- Data Structures & Utilities ---
peg = { workspace = true }
glob = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
socket2 = { workspace = true }
form_urlencoded = { workspace = true }

dssh = { workspace = true, optional = true }
remoc = { workspace = true }
dhttp = { workspace = true }
dhttp-home = { workspace = true }
dhttp-identity = { workspace = true }
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
chrono = "0.4"
tracing-appender = { workspace = true }

# --- Platform Specific Dependencies ---
[target.'cfg(any(target_os = "android", target_env = "ohos"))'.dependencies]
pnet = "0.35.0"

[target.'cfg(not(any(target_os = "android", target_env = "ohos")))'.dependencies]
getifs = "0.6"


[features]
sshd = [
    "dep:dssh",
    "dssh/server",
    "remoc/rfn",
    "h3x/ipc",
    "h3x/webtransport",
]
pam = ["sshd", "dssh/pam"]
stun_traversal = []
qlog = []
