# pishoo/Cargo.toml

[package]
name = "pishoo"
description = "modern, secure, QUIC-powered web/proxy engine"
homepage = "https://pishoo.genmeta.net"
version = "0.4.2"
edition = "2024"

[[package.metadata.genmeta-buildx.deb.packages]]
name = "pishoo"
upload.remote = "ubuntu@download.genmeta.net:/data/wwwroot/ppa/deb/main"

build.builder = "zigbuild"
build.dependencies.always = ["$arch:libc-dev"]
build.dependencies.features.sshd = ["$arch:libpam0g-dev"]

package.commands = [
  "cargo deb --target $target --no-build --no-strip",
  "cp target/$target/debian/*.deb $debs/",
]

[[package.metadata.genmeta-buildx.deb.packages]]
name = "pishoo-common"
upload.remote = "ubuntu@download.genmeta.net:/data/wwwroot/ppa/deb/main"

package.commands = [
  "export PISHOO_COMMON_VERSION=0.2.1",
  "export DEBIAN_FILE=pishoo-common_$PISHOO_COMMON_VERSION-1_all.deb",
  # 检查文件是否存在，如果存在则跳过
  """
  if [ ! -f $debs/$DEBIAN_FILE ]; then
    # 复制文件
    mkdir -p /tmp/pishoo-common/
    cp -r pishoo/pkg/common/* /tmp/pishoo-common/
    mkdir -p /tmp/pishoo-common/DEBIAN
    cp -r pishoo/pkg/debian/* /tmp/pishoo-common/DEBIAN/
    sed -i "s/Version:.*/Version: ${PISHOO_COMMON_VERSION}-1/" /tmp/pishoo-common/DEBIAN/control
    # 打包
    dpkg-deb -b /tmp/pishoo-common $debs/$DEBIAN_FILE
  else
    echo "Package $DEBIAN_FILE already exists, skipping package"
  fi
  """,
]

[[package.metadata.genmeta-buildx.homebrew.formulae]]
upload.remote = "ubuntu@download.genmeta.net:/data/wwwroot/homebrew"
download.url = "https://download.genmeta.net/homebrew"
build.apple = true
build.intel = true

copy-assets = [
  "cp $project/target/$target/release/pishoo     $formula/",
  "cp $project/pishoo/pkg/common/etc/pishoo/pishoo.conf $formula/",
  # AI: 在 macOS 上，sed -i 需要一个备份扩展名参数，即使不需要备份也要提供空字符串
  "sed -i '' 's;/etc;etc;g' $formula/pishoo.conf",
  "cp $project/pishoo/pkg/common/etc/pishoo/mime.types  $formula/",
]

content = """
  def install
    bin.install "pishoo"

    (etc/"pishoo").mkpath
    chmod 0755, etc/"pishoo"
    etc.install "pishoo.conf" => "pishoo/pishoo.conf" unless File.exist? "#{etc}/pishoo/pishoo.conf"
    etc.install "mime.types"  => "pishoo/mime.types"  unless File.exist? "#{etc}/pishoo/mime.types"

    (etc/"pishoo/ssl").mkpath
    chmod 0700, etc/"pishoo/ssl"

    (etc/"pishoo/acl").mkpath
    chmod 0700, etc/"pishoo/acl"
    begin
      touch etc/"pishoo/acl/rules.db"
    rescue
      opoo "Failed to initial access rule database at #{etc}/pishoo/acl/rules.db. If this is not the first installation, this warning can be ignored."
    end
  end

  def caveats
    <<~EOS
      Configuration files are installed at:
        #{etc}/pishoo/pishoo.conf

      The SSL certificates should be placed in:
        #{etc}/pishoo/ssl/
    
      For the firest install, empty access rule database file created at:
        #{etc}/pishoo/acl/rules.db
      You can install `access` to configure firewall rules
    EOS
  end

  service do
    run [opt_bin/"pishoo", "-c", etc/"pishoo/pishoo.conf"]
    keep_alive true
    log_path var/"log/pishoo.log"
    error_log_path var/"log/pishoo.error.log"
    working_dir HOMEBREW_PREFIX
  end

  test do
    system "#{bin}/pishoo", "-V"
  end
"""


# --- Package Metadata (Debian) ---
[package.metadata.deb]
name = "pishoo"
maintainer = "Genmeta Tech Limited <support@genmeta.net>"
copyright = "Copyright © 2025 Genmeta Tech Limited"
extended-description = """
Pishoo (\"Prosperity Guardian Beast\") is a powerful proxy server optimized for HTTP/3 and end-to-end encrypted communication. Built for privacy and security scenarios, it seamlessly functions as both a forward proxy for client privacy and a reverse proxy to streamline traffic between edge networks and backend services. Its architecture is designed to safeguard your data from infringement and ensures that it can be accessed and utilized securely.
"""
depends = "pishoo-common (>= 0.2.0), $auto"
section = "httpd"
priority = "optional"
maintainer-scripts = "pkg/debian"
assets = [["target/release/pishoo", "usr/bin/", "755"]]

[dependencies]
# --- Workspace Member ---
gateway = { workspace = true }

# --- Core & Error Handling ---
snafu = { workspace = true }

# --- Async Runtime ---
tokio = { workspace = true }

# --- CLI Parsing ---
clap = { workspace = true }


# --- Firewall ---
firewall-db = { workspace = true }

# --- Database & ORM ---
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }

# --- Logging & Tracing ---
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
console-subscriber = { workspace = true, optional = true }

# --- Terminal Detection ---
atty = { workspace = true }

[target.'cfg(unix)'.dependencies]
# --- Signal Handling ---
nix = { workspace = true, features = ["signal"] }

[features]
default = ["sqlx-sqlite"]
sshd = ["gateway/sshd"]
qlog = ["gateway/qlog"]
console_subscriber = ["dep:console-subscriber"]
sqlx-sqlite = ["sea-orm-migration/sqlx-sqlite"]
