# pishoo/Cargo.toml

[package]
name = "pishoo"
description = "modern, secure, QUIC-powered web/proxy engine"
homepage = "https://pishoo.genmeta.net"
version = "0.4.2"
edition = "2024"

[[bin]]
name = "pishoo"
path = "src/main.rs"

[[bin]]
name = "pishoo-worker"
path = "src/bin/pishoo_worker.rs"

[[bin]]
name = "pishoo-ssh-session"
path = "src/bin/pishoo_ssh_session.rs"
required-features = ["sshd"]

[dependencies]
# --- Workspace Member ---
gateway = { workspace = true }
dhttp-home = { workspace = true }

# --- QUIC & HTTP/3 ---
dquic = { workspace = true }
h3x = { workspace = true, features = ["remoc"] }
rustls = { workspace = true }
rustls-pemfile = "2"

# --- Serialization & IPC ---
remoc = { workspace = true }
serde = { workspace = true }

# --- Error Handling ---
snafu = { workspace = true }

# --- Async Runtime ---
futures = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }

# --- HTTP ---
http = { workspace = true }
axum = { workspace = true }

# --- Tower ---
tower = { workspace = true }

# --- CLI Parsing ---
clap = { workspace = true }

# --- Firewall ---
firewall-db = { workspace = true }

# --- SSH3 ---
genmeta-ssh = { workspace = true, optional = true }

# --- Database & ORM ---
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }

# --- Logging & Tracing ---
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
console-subscriber = { workspace = true, optional = true }

# --- System / OS ---
libc = { workspace = true }
nix = { workspace = true, features = ["signal", "process", "user", "fs"] }

[features]
default = ["sqlx-sqlite"]
sshd = ["gateway/sshd", "dep:genmeta-ssh", "nix/socket", "nix/uio"]
pam = ["sshd", "genmeta-ssh/pam", "gateway/pam"]
qlog = ["gateway/qlog"]
console_subscriber = ["dep:console-subscriber"]
sqlx-sqlite = ["sea-orm-migration/sqlx-sqlite"]
