[package]
name = "xtask"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
bollard = "0.19"
cargo_metadata = "0.19"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
futures-util = "0.3"
sha2 = "0.10"
snafu = "0.9"
tar = "0.4"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
