[package]
name = "xtask"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
aws-credential-types = "1"
# Keep default `default-https-client` disabled. It pulls aws-lc, and aws-lc-sys
# fails to assemble on i686-pc-windows-msvc under clang-cl during release
# cross-builds. Enable only the rustls/ring-backed features used by S3 publish.
aws-sdk-s3 = { version = "1", default-features = false, features = [
    "rt-tokio",
    "rustls",
    "sigv4a",
] }
bollard = "0.21"
cargo_metadata = "0.23"
clap = { version = "4", features = ["derive", "env"] }
flate2 = "1"
inquire = "0.9"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
sha2 = "0.11"
snafu = "0.9"
tar = "0.4"
tempfile = "3"
toml = "1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
walkdir = "2"
