[package]
name = "https-upstream-server"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
bytes = "1"
clap = { version = "4", features = ["derive"] }
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = "2"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
x509-parser = "0.18"
